--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,8 +29,8 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Source+Serif+Pro&display=swap" rel="stylesheet">
+
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
