--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,10 +2,9 @@
 import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
+import { SITE_TITLE, SITE_DESCRIPTION } from '../../utils/consts';
 import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
-import './blog.module.css';
+import './BlogList.module.css';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
@@ -44,10 +43,7 @@ const posts = (await getCollection('blog')).sort(
 						</li>
 					  ))
 					}
-				  </ul>
-				  
-				  
-				  
+				  </ul>  
 			</section>
 		</main>
 		<Footer />
