--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../utils/consts';
+import RecentPosts from '../components/RecentPosts.astro';
 ---
 
 <!doctype html>
@@ -13,7 +14,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../utils/consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, welcome to my websites</h1>
+		<RecentPosts/>
 		</main>
 		<Footer />
 	</body>
