--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 :root {
-	--accent: #2563eb; /* 更柔和的蓝色 */
+	--accent: #2563eb; 
 	--accent-dark: #1e40af;
 	--black: 30, 32, 36;
 	--gray: 100, 112, 129;
