--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../utils/consts";
 import RecentPosts from "../components/RecentPosts.astro";
+import IntroSection from "../components/IntroSection.astro";
 ---
 
 <!doctype html>
@@ -13,14 +14,10 @@ import RecentPosts from "../components/RecentPosts.astro";
   <body>
     <Header />
     <main>
-      <section class="intro-section">
-        <h1>Hi, Welcome to My Blog</h1>
-        <p>
-
-        </p>
-      </section>
+      <IntroSection />
       <RecentPosts />
     </main>
+
   </body>
 </html>
 
