--- a/src/components/MyProjects.astro
+++ b/src/components/MyProjects.astro
@@ -1,7 +1,7 @@
 ---
 import { GITHUB_REPO } from '../utils/consts';
 const projects = [
-  { name: "Project One", repoName: "leetcode-solutions" },
+  { name: "My Frontend learning notes", repoName: "frontend-bootcamp" },
   { name: "Project Two", repoName: "project-two" },
   { name: "Project Three", repoName: "project-three" },
 ];
