--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../utils/consts";
   <body>
     <Header />
     <main>
-      <IntroSection />
-      <RecentPosts />
-      <MyProjects />
+      <div class="section"><IntroSection /></div>
+      <div class="section"><RecentPosts /></div>
+      <div class="section"><MyProjects /></div>
     </main>
   </body>
 </html>
