--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import HeaderLink from "./HeaderLink.astro";
 
 <header>
   <nav>
-    <h2><HeaderLink href="/">{SITE_TITLE}</HeaderLink></h2>
+    <p><HeaderLink href="/">{SITE_TITLE}</HeaderLink></p>
     <div class="internal-links">
       <HeaderLink href="/">Home</HeaderLink>
       <HeaderLink href="/blog">Blog</HeaderLink>
@@ -24,13 +24,8 @@ import HeaderLink from "./HeaderLink.astro";
   </nav>
 </header>
 <style>
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
   .internal-links {
-    display: flex-grow;
+    display: flex;
+    gap: 1rem;
   }
 </style>
