jl #20250601 change style

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,10 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../utils/consts";
   </head>
   <body>
     <Header />
-    <main>
-      <div class="section"><IntroSection /></div>
-      <div class="section"><RecentPosts /></div>
-      <div class="section"><MyProjects /></div>
+    <main role="main">
+      <div class="section"><IntroSection client:load /></div>
+      <div class="section"><RecentPosts client:load /></div>
+      <div class="section"><MyProjects client:load /></div>
     </main>
   </body>
 </html>
