--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,8 +7,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <h1>About Me</h1>
 
     <p class="intro">
-      I believe that each of us comes here with only one true purpose: <strong
-        >to become who we truly are.</strong
+      I believe that each of us comes here with only one true purpose: <strong>
+        to become who we truly are.</strong
       ><br />
       Every day, I seek to understand this answer.<br /><br />
       When I am happy, I know who I am.<br />
