jl #20250601 fix style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,12 +92,14 @@ ul {
 
 ul li {
   margin-bottom: 0.5rem;
+  text-align: left;
 }
 
 .section {
   padding-top: 3rem;
   padding-bottom: 3rem;
   margin-bottom: 3rem;
+  text-align: center;
 }
 
 img {
