--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -2,18 +2,10 @@
 
 ---
 
-<section class="intro-section">
+<section class="section">
   <h2>Hey there, nice to see you!</h2>
   <p id="dynamic-text"><span class="highlight">Developer.</span></p>
 </section>
-
-<style>
-  .intro-section {
-    text-align: center;
-    margin-bottom: 3rem;
-  }
-  }
-</style>
 
 <script is:inline>
   const words = [
