jl #20250601 fix build

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../utils/consts";
   <body>
     <Header />
     <main role="main">
-      <div class="section"><IntroSection client:load /></div>
-      <div class="section"><RecentPosts client:load /></div>
-      <div class="section"><MyProjects client:load /></div>
+      <div class="section"><IntroSection /></div>
+      <div class="section"><RecentPosts /></div>
+      <div class="section"><MyProjects /></div>
     </main>
   </body>
 </html>
